# tstar_description

./: .gitignore  CMakeLists.txt  README.md  package.xml  pyproject.toml
meshes/: event_left.STL  os_dome.STL  thermal_left.STL  thermal_right.STL
src/tstar_description/: __init__.py  package.xml  visualize.py
src/tstar_description/meshes/: event_right.STL  os_dome.STL  thermal_right.STL  zed.STL
src/tstar_description/urdf/: gq7.urdf.xacro  tartanstar.urdf.xacro  zed_macro.urdf.xacro
tstar_description/: CMakeLists.txt
tstar_description/launch/: robot_state.launch.py  rviz.rviz
tstar_description/meshes/: event_right.STL  gps.STL  thermal_left.STL  thermal_right.STL  xwr.STL
tstar_description/urdf/: gq7.urdf.xacro  tartanstar.urdf.xacro  zed_macro.urdf.xacro
urdf/: tartanstar.urdf.xacro
