[project]
name = "tstar_description"
version = "0.1.0"
description = "URDF Description package for TartanStar sensor rig. Contains configuration data, 3D models and launch files."
requires-python = ">=3.12"
license = { text = "MIT" }
maintainers = [{ name = "Ray Huang", email = "juiteh@andrew.cmu.edu" }]
dependencies = [
    "numpy>=1.24",
    "xacrodoc>=2.0",
]

[project.optional-dependencies]
rerun = [
    "rerun-sdk>=0.20",
]

[project.scripts]
tstar-extrinsics = "tstar_description.visualize:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tstar_description = [
    "package.xml",
    "urdf/*.xacro",
    "urdf/include/*.xacro",
    "meshes/*.STL",
    "meshes/*.stl",
]

[tool.uv]
package = true
